[gd_scene load_steps=7 format=3 uid="uid://duj2y2turgoi6"]

[ext_resource type="Script" path="res://scripts/options.gd" id="1_emkan"]
[ext_resource type="Texture2D" uid="uid://difkkmc00i5co" path="res://sprites/UI/MobileControls.png" id="2_kbpl2"]

[sub_resource type="LabelSettings" id="LabelSettings_3wgbx"]
line_spacing = 8.0
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.505882)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2sne"]
atlas = ExtResource("2_kbpl2")
region = Rect2(0, 49, 60, 21)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mdppm"]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_bottom = 5.0
texture = SubResource("AtlasTexture_r2sne")
modulate_color = Color(0.411765, 0.411765, 0.411765, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1pstj"]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_bottom = 5.0
texture = SubResource("AtlasTexture_r2sne")

[node name="Options" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emkan")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Integer Scaling:
Show Statistics:

"
label_settings = SubResource("LabelSettings_3wgbx")
vertical_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="CheckBox" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
action_mode = 0

[node name="CheckBox2" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
button_pressed = true
action_mode = 0

[node name="Back" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxTexture_mdppm")
theme_override_styles/disabled = SubResource("StyleBoxTexture_1pstj")
theme_override_styles/hover = SubResource("StyleBoxTexture_mdppm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1pstj")
theme_override_styles/normal = SubResource("StyleBoxTexture_1pstj")
text = "  Back  "

[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer/CheckBox2" to="." method="_on_check_box_2_toggled"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
